crates/scrap_parser/tests/snapshots/snapshots__inner_-6.snap
---
source: crates/scrap_parser/tests/snapshots.rs
expression: "parse(db, source)"
---
Can(
    Can {
        [salsa id]: Id(2400),
        id: NodeId {
            id: 0,
            file_hash: 16101345102062212073,
        },
        name: ModuleId {
            path: PathKey {
                path: Path {
                    span: Span {
                        [salsa id]: Id(818),
                        start: 0,
                        end: 4,
                    },
                    segments: [
                        PathSegment {
                            ident: Ident {
                                id: NodeId {
                                    id: -2,
                                    file_hash: 0,
                                },
                                name: Symbol {
                                    text: "test",
                                },
                                span: Span {
                                    [salsa id]: Id(817),
                                    start: 0,
                                    end: 4,
                                },
                            },
                            id: NodeId {
                                id: -2,
                                file_hash: 0,
                            },
                        },
                    ],
                },
            },
        },
        items: [
            Item {
                kind: Module(
                    Module {
                        [salsa id]: Id(2000),
                        id: ModuleId {
                            path: PathKey {
                                path: Path {
                                    span: Span {
                                        [salsa id]: Id(819),
                                        start: 0,
                                        end: 9,
                                    },
                                    segments: [
                                        PathSegment {
                                            ident: Ident {
                                                id: NodeId {
                                                    id: -2,
                                                    file_hash: 0,
                                                },
                                                name: Symbol {
                                                    text: "test",
                                                },
                                                span: Span {
                                                    [salsa id]: Id(817),
                                                    start: 0,
                                                    end: 4,
                                                },
                                            },
                                            id: NodeId {
                                                id: -2,
                                                file_hash: 0,
                                            },
                                        },
                                        PathSegment {
                                            ident: Ident {
                                                id: NodeId {
                                                    id: 1,
                                                    file_hash: 16101345102062212073,
                                                },
                                                name: Symbol {
                                                    text: "inner",
                                                },
                                                span: Span {
                                                    [salsa id]: Id(802),
                                                    start: 4,
                                                    end: 9,
                                                },
                                            },
                                            id: NodeId {
                                                id: 1,
                                                file_hash: 16101345102062212073,
                                            },
                                        },
                                    ],
                                },
                            },
                        },
                        kind: Loaded(
                            [
                                Item {
                                    kind: Fn(
                                        FnDef {
                                            [salsa id]: Id(1c00),
                                            id: NodeId {
                                                id: 11,
                                                file_hash: 16101345102062212073,
                                            },
                                            ident: Ident {
                                                id: NodeId {
                                                    id: 2,
                                                    file_hash: 16101345102062212073,
                                                },
                                                name: Symbol {
                                                    text: "helper",
                                                },
                                                span: Span {
                                                    [salsa id]: Id(808),
                                                    start: 19,
                                                    end: 25,
                                                },
                                            },
                                            args: [],
                                            ret_type: None,
                                            body: Block {
                                                stmts: [
                                                    Stmt {
                                                        id: NodeId {
                                                            id: 9,
                                                            file_hash: 16101345102062212073,
                                                        },
                                                        kind: Semi(
                                                            Expr {
                                                                id: NodeId {
                                                                    id: 8,
                                                                    file_hash: 16101345102062212073,
                                                                },
                                                                kind: Call(
                                                                    Expr {
                                                                        id: NodeId {
                                                                            id: 7,
                                                                            file_hash: 16101345102062212073,
                                                                        },
                                                                        kind: Path(
                                                                            Path {
                                                                                span: Span {
                                                                                    [salsa id]: Id(81a),
                                                                                    start: 38,
                                                                                    end: 43,
                                                                                },
                                                                                segments: [
                                                                                    PathSegment {
                                                                                        ident: Ident {
                                                                                            id: NodeId {
                                                                                                id: 3,
                                                                                                file_hash: 16101345102062212073,
                                                                                            },
                                                                                            name: Symbol {
                                                                                                text: "print",
                                                                                            },
                                                                                            span: Span {
                                                                                                [salsa id]: Id(80e),
                                                                                                start: 38,
                                                                                                end: 43,
                                                                                            },
                                                                                        },
                                                                                        id: NodeId {
                                                                                            id: 4,
                                                                                            file_hash: 16101345102062212073,
                                                                                        },
                                                                                    },
                                                                                ],
                                                                            },
                                                                        ),
                                                                        span: Span {
                                                                            [salsa id]: Id(81a),
                                                                            start: 38,
                                                                            end: 43,
                                                                        },
                                                                    },
                                                                    [
                                                                        Expr {
                                                                            id: NodeId {
                                                                                id: 6,
                                                                                file_hash: 16101345102062212073,
                                                                            },
                                                                            kind: Lit(
                                                                                Lit {
                                                                                    id: NodeId {
                                                                                        id: 5,
                                                                                        file_hash: 16101345102062212073,
                                                                                    },
                                                                                    kind: Str,
                                                                                    span: Span {
                                                                                        [salsa id]: Id(810),
                                                                                        start: 44,
                                                                                        end: 51,
                                                                                    },
                                                                                },
                                                                            ),
                                                                            span: Span {
                                                                                [salsa id]: Id(81b),
                                                                                start: 44,
                                                                                end: 52,
                                                                            },
                                                                        },
                                                                    ],
                                                                ),
                                                                span: Span {
                                                                    [salsa id]: Id(81c),
                                                                    start: 38,
                                                                    end: 53,
                                                                },
                                                            },
                                                        ),
                                                        span: Span {
                                                            [salsa id]: Id(81c),
                                                            start: 38,
                                                            end: 53,
                                                        },
                                                    },
                                                ],
                                                id: NodeId {
                                                    id: 10,
                                                    file_hash: 16101345102062212073,
                                                },
                                                span: Span {
                                                    [salsa id]: Id(81d),
                                                    start: 28,
                                                    end: 59,
                                                },
                                            },
                                            span: Span {
                                                [salsa id]: Id(81e),
                                                start: 16,
                                                end: 59,
                                            },
                                        },
                                    ),
                                    span: Span {
                                        [salsa id]: Id(81f),
                                        start: 16,
                                        end: 61,
                                    },
                                    id: NodeId {
                                        id: 12,
                                        file_hash: 16101345102062212073,
                                    },
                                    vis: Visibility {
                                        kind: Inherited,
                                        span: Span {
                                            [salsa id]: Id(806),
                                            start: 16,
                                            end: 18,
                                        },
                                    },
                                },
                            ],
                            Yes,
                            Span {
                                [salsa id]: Id(820),
                                start: 0,
                                end: 61,
                            },
                        ),
                    },
                ),
                span: Span {
                    [salsa id]: Id(821),
                    start: 0,
                    end: 61,
                },
                id: NodeId {
                    id: 13,
                    file_hash: 16101345102062212073,
                },
                vis: Visibility {
                    kind: Inherited,
                    span: Span {
                        [salsa id]: Id(800),
                        start: 0,
                        end: 3,
                    },
                },
            },
        ],
    },
)
